--- a/css/theme/thesis.css
+++ b/css/theme/thesis.css
@@ -36,6 +36,15 @@ body {
   line-height: 1.3;
   font-weight: inherit; }
 
+
+/*********************************************
+ * IMAGE TABLE
+ *********************************************/
+ .reveal .imgtable td {
+  border: none;
+  text-align: center;
+}
+
 /*********************************************
  * BLACK THEME
  *********************************************/
@@ -74,6 +83,7 @@ body {
 .reveal .positive h5 {
   color: white;
 }
+
 
 
 /*********************************************
