--- a/css/theme/thesis.css
+++ b/css/theme/thesis.css
@@ -55,10 +55,10 @@ body {
   color: white;
 }
 
-.reveal .black h7{
+/* .reveal .black h7{
   color: black;
   background-color: white;
-}
+} */
 
 /*********************************************
  * ELLIPSIS THEME
