--- a/css/theme/thesis.css
+++ b/css/theme/thesis.css
@@ -195,7 +195,7 @@ body {
   /*background-color: rgba(255,0,0,0.5);*/
   font-family: 'Oswald', sans-serif !important;
   font-size: 1.5em;
-  padding-bottom: 1em;
+  padding-bottom: 0.5em;
   }
 .reveal h6 {
   font-family: 'Oswald', sans-serif;
@@ -279,7 +279,7 @@ body {
   display: inline-block;
   text-align: left;
   font-size: 0.75em;
-  margin-top: 0em;
+  padding: 0em;
   list-style-type: disc; 
 
 }
