kirchhoff ok reste discret + marsu en 8 minutes

--- a/css/theme/thesis.css
+++ b/css/theme/thesis.css
@@ -117,6 +117,12 @@ body {
 }
 
 
+/*********************************************
+ * RED THEME
+ *********************************************/
+ .reveal .red {
+  color:red;
+}
 
 
 /*********************************************
@@ -231,14 +237,14 @@ body {
   margin: 20px 0;
   line-height: 1.3;
   font-weight: 200;
-  font-size: 1.0em;
+  font-size: .75em;
   text-align: center;
 }
 
 .reveal cite{
   margin-top: 100%;
   color: grey;
-  font-size: 0.5em;
+  font-size: 0.6em;
 }
 
 .reveal i{
