--- a/css/theme/thesis2.css
+++ b/css/theme/thesis2.css
@@ -22,37 +22,202 @@ font-family: 'Rubik', sans-serif;
  */
 
 /*********************************************
- * BASE
- *********************************************/
+* PROGRESS BAR
+*********************************************/
+.reveal .progress {
+  background:rgba(0, 0, 0, 0.6);
+  height: 6px;
+}
+
+.reveal .progress span {
+  background: rgb(104, 135, 255);
+  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+  -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+/*********************************************
+* THEME : BASE
+*********************************************/
 body {
   background: #fff;
-  background-color: white ;
+  /* background-color: white ; */
+  background-color:rgb(211, 211, 211);
 }
 
 .reveal {
   font-family: 'Rubik', sans-serif; 
   font-weight: 300;
-  font-size: 44px;
+  font-size: 48px;
   color: black;
 }
 
+.reveal hr {
+  display: block;
+  unicode-bidi: isolate;
+  -webkit-margin-before: 0.5em;
+  -webkit-margin-after: 0.5em;
+  -webkit-margin-start: auto;
+  -webkit-margin-end: auto;
+  overflow: hidden;
+  border-style: inset;
+  /* border-width: 1px;
+  width: 50%; */
+}
+
+.reveal p {
+  font-weight: 200;
+  font-size: .75em;
+  margin: 20px 0;
+  line-height: 1.3;
+  text-align: center;
+}
+
+.reveal ul {
+  display: inline-block;
+  font-size: 0.75em;
+  text-align: left;
+  list-style-type: disc; 
+  padding-top: 0.5em;
+  padding-bottom: 0em;
+}
+
+.reveal q {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 300;
+  font-size: 0.8em;
+  color: grey;
+  /* font-style:italic; */
+}
+
 .reveal strong {
+  font-weight: 400;
+  font-size: 1.2em;
+}
+
+.reveal b {
+  font-weight: bold;
+}
+
+.reveal small {
+  font-weight: 100;
+  font-size: 0.8em;
+}
+
+.reveal mark {
   font-family: 'Roboto Mono', monospace;
   font-weight: 400;
-  text-transform: uppercase;
-  background-color: rgb(104, 135, 255);
-  color: white;
-  font-size: 1.2em;
+  font-size: 1.0em;
   font-weight: normal; 
+  background-color: rgb(104, 135, 255);
+  color: rgb(235, 235, 235);
+  padding: 0em 0.1em;
 }
 
 .reveal cite{
   font-family: 'Roboto Mono', monospace;
   font-weight: 400;
-  font-size: 0.6em;
+  font-size: 0.7em;
   margin-top: 100%;
   color: grey;
 }
+
+/*********************************************
+ * THEME : PLAN 
+ *********************************************/
+ .reveal .plan {
+  font-family: 'Rubik', sans-serif; 
+  font-weight: 300;
+}
+.reveal .slide-background .plan {
+  background-color: black;
+}
+.reveal .plan h5{
+  font-size: 2em;
+  color:white;
+  display: none;
+}
+.reveal .plan ul {
+  font-size: 1.0em;
+  text-align: left;
+  color:rgb(110, 110, 110);
+}
+.reveal .plan li {
+  list-style-type: none;
+}
+.reveal .plan .highlight {
+  color:white;  
+}
+.reveal .plan strong {
+  color:white;
+  font-size: 1.5em;
+  /* font-weight: bold;  */
+}
+
+/*********************************************
+ * BLACK THEME
+ *********************************************/
+ .reveal .slide-background .black {
+  background: #000000;
+}
+.reveal .black strong,
+.reveal .black h5{
+  color: white;
+}
+/*********************************************
+ * THEME : POSITIVE
+ *********************************************/
+.reveal .slide-background .positive {
+  background-color: #9ccc65;
+}
+.reveal .positive,
+.reveal .positive ul,
+.reveal .positive h5 {
+  color: white;
+}
+.reveal .positive mark {
+  color: #9ccc65;
+  background-color: white;
+}
+.reveal .positive h5 {
+  padding-bottom: 1em;
+}
+.reveal .positive p {
+  padding-bottom: 1em;
+}
+/*********************************************
+ * NEGATIVE THEME
+ *********************************************/
+.reveal .slide-background .negative {
+  background: #ff7043;
+}
+.reveal .negative,
+.reveal .negative p,
+.reveal .negative h5 {
+  color: white;
+}
+.reveal .negative mark {
+  color: #ff7043;
+  background-color: white;
+}
+.reveal .negative h5 {
+  padding-bottom: 1em;
+}
+.reveal .negative p {
+  padding-bottom: 1em;
+}
+
+/* 
+.reveal small {
+  display: inline-block;
+  font-size: 0.6em;
+  line-height: 1.2em;
+  vertical-align: top; }
+
+.reveal small * {
+  vertical-align: top; } */
+
+
+
 
 /* keywords */
 .reveal h7 {
@@ -67,33 +232,7 @@ body {
   padding: 0.5em;
   }
 
-/*********************************************
- * POSITIVE THEME
- *********************************************/
- .reveal .slide-background .positive {
-  background-color: #9ccc65;
-}
-.reveal .positive strong {
-  color: white;
-}
-.reveal .positive ul,
-.reveal .positive h5 {
-  color: white;
-}
 
-/* 
-font-family: 'Archivo Black', sans-serif;
-font-family: 'Rubik', sans-serif; 
-*/
-
-
-
-/* 
-Font-Family: 'Roboto', Sans-Serif;
-Font-Size: 35px;
-Font-Family: 'Droid Serif', Serif;
-Font-Size: 15px; 
-*/
 
 
 #title-footer
@@ -122,21 +261,6 @@ Font-Size: 15px;
 }
 
 /*********************************************
- * BLACK THEME
- *********************************************/
-.reveal .slide-background .black {
-  background: #000000;
-}
-.reveal .black strong {
-  color: white;
-}
-
-/* .reveal .black h7{
-  color: black;
-  background-color: white;
-} */
-
-/*********************************************
  * ELLIPSIS THEME
  *********************************************/
  .reveal .slide-background .ellipsis {
@@ -150,42 +274,6 @@ Font-Size: 15px;
 
 
 
-/*********************************************
- * PLAN THEME
- *********************************************/
- .reveal .plan {
-  font-family: 'Rubik', sans-serif; 
-  font-weight: 300;
-}
-
-.reveal .slide-background .plan {
-  background-color: black;
-}
-.reveal .plan h5{
-  color:white;
-  font-size: 2em;
-  display: none;
-}
-.reveal .plan ul {
-  text-align: left;
-  color:rgb(110, 110, 110);
-}
-.reveal .plan li {
-  /* font-weight: bold;  */
-  list-style-type: none;
-  font-size: 1.4em;
-}
-.reveal .plan .highlight {
-  color:white;
-  font-size: 1.4em;
-  /* font-weight: bold;  */
-}
-
-.reveal .plan strong {
-  color:white;
-  font-size: 1.5em;
-  /* font-weight: bold;  */
-}
 
 
 /*********************************************
@@ -196,17 +284,7 @@ Font-Size: 15px;
 }
 
 
-/*********************************************
- * NEGATIVE THEME
- *********************************************/
-.reveal .slide-background .negative {
-  background: #ff7043;
-}
-.reveal .negative strong,
-.reveal .negative ul,
-.reveal .negative h5 {
-  color: white;
-}
+
 
 
 /*********************************************
@@ -292,16 +370,6 @@ Font-Size: 15px;
 .reveal .slide-number {
   background-color: rgba(0,0,0,0.0);
 }
-.reveal p {
-  /*font-family: Roboto, Helvetica, sans-serif;*/
-
-  margin: 20px 0;
-  line-height: 1.3;
-  font-weight: 200;
-  font-size: .75em;
-  text-align: center;
-}
-
 
 
 .reveal i{
@@ -320,27 +388,13 @@ Font-Size: 15px;
 .reveal em {
   font-style: italic; }
 
-/* .reveal ol,
-.reveal dl,
-.reveal ul {
-  display: inline-block;
-  text-align: left;
-  margin: 1em 0 0 1em; } */
-
   .reveal li {
     margin-bottom: 0.5em; }
 
 .reveal ol {
   list-style-type: decimal; }
 
-.reveal ul {
-  display: inline-block;
-  text-align: left;
-  font-size: 0.75em;
-  padding: 0em;
-  list-style-type: disc; 
 
-}
 
 .reveal ul ul {
   list-style-type: square; }
@@ -438,14 +492,6 @@ Font-Size: 15px;
 .reveal sub {
   vertical-align: sub; }
 
-.reveal small {
-  display: inline-block;
-  font-size: 0.6em;
-  line-height: 1.2em;
-  vertical-align: top; }
-
-.reveal small * {
-  vertical-align: top; }
 
 .reveal .center p{
   text-align: center;
@@ -524,27 +570,9 @@ Font-Size: 15px;
 .reveal .controls .navigate-down.enabled:hover {
   border-top-color: #51BAE8; }
 
-/*********************************************
- * PROGRESS BAR
- *********************************************/
-.reveal .progress {
-  background:rgba(0, 0, 0, 0.6);
-  height: 3px;
-}
 
-.reveal .progress span {
-  background: red;
-  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
-.reveal .backgrounds {
-         /*-webkit-filter: blur(20px);
-         -moz-filter: blur(20px);
-         -o-filter: blur(5px);
-         -ms-filter: blur(5px);*/
-         /*filter: blur(0px) grayscale(60%) opacity(80%);*/
-     }
+
 
 
 /*********************************************
