--- a/css/theme/thesis2.css
+++ b/css/theme/thesis2.css
@@ -26,7 +26,7 @@ font-family: 'Rubik', sans-serif;
 *********************************************/
 .reveal .progress {
   background:rgba(0, 0, 0, 0.6);
-  height: 6px;
+  height: 3px;
 }
 
 .reveal .progress span {
@@ -34,6 +34,44 @@ font-family: 'Rubik', sans-serif;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+/*********************************************
+* COVER
+*********************************************/
+.reveal .slide-background .cover  {
+  background-color: #000000
+  ;
+}
+.reveal .cover {
+  color: #fff;
+}
+.reveal .cover h1,
+.reveal .cover h2{
+  color: #fff;
+}
+/*  title headings */
+.reveal .cover h1 {
+  font-family: 'Rubik', sans-serif; 
+  font-weight: 400;
+  line-height: 1.4em;
+  text-transform: none;
+  text-shadow: none; 
+  font-size: 1.2em; 
+}
+.reveal .cover h2 {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 0.7em; 
+}
+.reveal .cover p{
+  line-height: 1.2em;
+}
+.reveal .cover table,
+.reveal .cover tr,
+.reveal .cover td{
+  border:none;
+}
 
 /*********************************************
 * THEME : BASE
@@ -318,20 +356,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/*  title headings */
-.reveal h1 {
-  font-family: "Superstudio", Helvetica, sans-serif;
-  color: rgb(104, 135, 255);
-  text-transform: none;
-  font-size: 1.2em; 
-  text-shadow: none; 
-}
-.reveal h2 {
-  font-family: 'Oswald', sans-serif;
-  text-transform: uppercase;
-  color: rgba(0,0,0,0.6);
-  font-size: 0.7em; 
-}
+
 
   /* horizontal slide headings */
 .reveal h3, .reveal h4{ 
@@ -632,17 +657,7 @@ html.slide_type_2 .backgrounds  {
 }*/
 
 
-/* TITLE
-*********************************************/
 
-.reveal .slide-background.cover  {
-    background-color: #000000
-    ;
-}
-.reveal .cover h1,
-.reveal .cover h2 {
-    color: #fff;
-}
 
 /* HEADING
 *********************************************/
