--- a/css/theme/thesis2.css
+++ b/css/theme/thesis2.css
@@ -35,6 +35,18 @@ font-family: 'Rubik', sans-serif;
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
+#title-footer
+{
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 300;
+}
+.reveal .slide-number {
+  background-color: rgba(0,0,0,0.0);
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 300;
+  font-size:0.35em;
+}
+  
 /*********************************************
 * COVER
 *********************************************/
@@ -273,11 +285,7 @@ body {
 
 
 
-#title-footer
-{
-	font-family: 'Roboto Mono', monospace;
-  font-weight: 300;
-}
+
 
 ::selection {
   color: #fff;
@@ -392,9 +400,6 @@ body {
  * OTHER
  *********************************************/
 
-.reveal .slide-number {
-  background-color: rgba(0,0,0,0.0);
-}
 
 
 .reveal i{
