--- a/plugin/title-footer/title-footer.css
+++ b/plugin/title-footer/title-footer.css
@@ -20,7 +20,7 @@
 	height: 3vh;
 	z-index: 20;
 	width: 100%;
-	font-size: 0.35em;
+	font-size: 0.3em;
 	text-align: center;
 	letter-spacing: 0em;
 	padding-top: 0.5vh;
@@ -45,6 +45,7 @@ div.progress[style="display: block;"] ~ #title-footer
 #title-footer p{
 	text-align: center;
 	margin: 0;
+	margin-top:0.1em;
 }
 
 .reveal #title-footer a{
