--- a/css/theme/thesis2.css
+++ b/css/theme/thesis2.css
@@ -122,6 +122,10 @@ body {
   text-align: center;
 }
 
+.reveal table {
+  font-size: 0.75em;
+}
+
 .reveal ul {
   display: inline-block;
   font-size: 0.75em;
@@ -134,7 +138,7 @@ body {
 .reveal q {
   font-family: 'Roboto Mono', monospace;
   font-weight: 300;
-  font-size: 0.8em;
+  font-size: 0.7em;
   color: grey;
   /* font-style:italic; */
 }
